--- a/templates/completesignup.html
+++ b/templates/completesignup.html
@@ -12,7 +12,7 @@
 {% endblock pagecss %}
 
 {% block pagecontent %}
-<article id="page-root">
+<article id="page-root" class="login">
     <div class="completesignup-iframe-container">
         <iframe frameborder="0"
                 scrolling="no"
