--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -6,7 +6,7 @@
 {% endblock pagecss %}
 
 {% block pagecontent %}
-<article id="page-root">
+<article id="page-root" class="login">
     <div class="forgot-pw-container card-case vertical-shadow">
         {% if sent_email %}
         <h4>We've sent you a message at:</h4>
@@ -17,9 +17,8 @@
             <h5 class="email">{{ sent_email }}</h5>
             <br>
 
-            <img src="/images/hand-tree.png" width="75" height="75" class="tree">
             <div class="instructions">
-                Follow the link in that message to reset your Khan Academy password.
+                Follow the link in that message to reset your iktel.nl password.
             </div>
 
             {% if debug_link %}
@@ -28,7 +27,6 @@
                 </div>
             {% endif %}
         {% else %}
-            <img src="/images/hand-tree.png" width="75" height="75" class="tree">
             <form id="forgot-pw-form" method="POST" class="auth-form">
                 <div class="field-container">
                     <label class="field-label" for="email">Email</label>
