--- a/templates/password-change.html
+++ b/templates/password-change.html
@@ -6,15 +6,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Khan Academy</title>
+        <title>iktel.nl</title>
         {{ js_css_packages.css_package("shared") }}
         {{ js_css_packages.css_package("login") }}
     </head>
     <body>
         <form id="pw-change-form" class="auth-form" method="POST" action="{{templatetags.to_secure_url('/pwchange')}}">
-        {% if reset_token %}
-            <img src="/images/hand-tree.png" width="75" height="75" class="tree">
-        {% endif %}
         <h4>
         {% if reset_token %}
         Create a new password for your account.
