--- a/templates/login.html
+++ b/templates/login.html
@@ -7,15 +7,15 @@
 {% endblock pagecss %}
 
 {% block pagecontent %}
-<article id="page-root">
+<article id="page-root" class="login">
     <div class="login-container card-case vertical-shadow" style="text-align:center;">
+    {% if login_hint %}
+            <h1>Please log in with your Google account: <br /><br /><b> {{ login_hint }} </b></h1>
+    {% else %}
+            <h1>Login op iktel.nl met</h1>
+    {% endif %}
 
     <div class="providers">
-        {% if login_hint %}
-                <h1>Please log in with your Google account: <br /><br /><b> {{ login_hint }} </b></h1>
-        {% else %}
-                <h3>Login op iktel.nl met</h3>
-        {% endif %}
         {{ login_macros.google_button(google_url) }}
         <br>
 
@@ -23,7 +23,44 @@
         {{ login_macros.facebook_button(true) }}
         {% endif %}
     </div>
+    <div class="pw-login-contents">
+        <form method="POST" class="auth-form" id="login-form" action="/login?continue={{continue|urlencode}}">
+            {# Use a whitespace to force the div to be non-empty and take space in the layout #}
+            <div class="field-error" id="error-text">&nbsp;</div>
 
+<!--
+            <img src="/images/hand-tree.png" width="75" height="75" class="tree">
+-->
+            <div class="field-container">
+                <label class="field-label" for="identifier">Email or username</label>
+                <input tabindex=1 id="identifier" name="identifier" class="simple-input ui-corner-all" value="{{ identifier|escape }}">
+            </div>
+
+            <div class="field-container">
+                <label class="field-label password-label" for="password">Password</label>
+                <input tabindex=2 id="password" name="password" type="password" class="simple-input ui-corner-all">
+                <div>
+                    <a id="forgot-hint" href="{{ templatetags.to_insecure_url('/forgotpw') }}" target="_top">Forgot password?</a>
+                </div>
+            </div>
+
+            <input tabindex=3 id="submit-button" class="simple-button green" value="Login" type="button">
+
+            <div class="signup-prompt-container">
+                <span class="signup-prompt">Don't have an account yet?</span>
+                <a class="signup-link" target="_top" href="{{ templatetags.to_insecure_url('/signup') }}?continue={{continue|urlencode}}">Create one</a>
+            </div>
+        </form>
+        {{ js_css_packages.js_package("shared") }}
+        {{ js_css_packages.js_package("login") }}
+        <script>
+        $(function() {
+            Login.initLoginForm({
+                baseAppUrl: "{{ templatetags.to_insecure_url('/') }}"
+            });
+          });
+        </script>
+    </div>
     </div>
 </article>
 {% endblock pagecontent %}
