--- a/templates/verification-email-text-only.html
+++ b/templates/verification-email-text-only.html
@@ -1,11 +1,9 @@
-Welcome to Khan Academy!
+Welcome bij iktel.nl
 
-Click on the following link to finish signing up.
+Klik op onderstaande link om de inschrijving af te ronden.
 
 {{verification_link}}
 
-If clicking doesn't seem to work, you can copy and paste the link into your browser's address bar.
+Indien je niet op de link kunt klikken, kopieer en plak de link dan in de adresbalk van je browser.
 
-Onward!
-Sal and the Khan Academy Team
-
+Succes!
