Keep http(s) security on signup iframe

--- a/templates/completesignup.html
+++ b/templates/completesignup.html
@@ -19,7 +19,7 @@
                 width="565"
                 height="480"
                 allowtransparency="yes"
-                src="{{templatetags.to_secure_url('/completesignup')}}?{{params}}&continue={{continue|escape}}&form=1">
+                src="{{templatetags.to_absolute_url('/completesignup')}}?{{params}}&continue={{continue|escape}}&form=1">
         </iframe>
     </div>
 </article>
