Change secure urls to absolute

--- a/templates/password-reset.html
+++ b/templates/password-reset.html
@@ -13,7 +13,7 @@
                 width="390px"
                 height="280px"
                 allowtransparency="yes"
-                src="{{templatetags.to_secure_url('/pwchange')}}?form=1&reset_token={{reset_token}}">
+                src="{{templatetags.to_absolute_url('/pwchange')}}?form=1&reset_token={{reset_token}}">
         </iframe>
     </div>
 </div>
