Restablish secure url's for password login

--- a/templates/password-change.html
+++ b/templates/password-change.html
@@ -11,7 +11,7 @@
         {{ js_css_packages.css_package("login") }}
     </head>
     <body>
-        <form id="pw-change-form" class="auth-form" method="POST" action="{{templatetags.to_absolute_url('/pwchange')}}">
+        <form id="pw-change-form" class="auth-form" method="POST" action="{{templatetags.to_secure_url('/pwchange')}}">
         <h4>
         {% if reset_token %}
         Create a new password for your account.
