--- a/templates/password-reset.html
+++ b/templates/password-reset.html
@@ -6,12 +6,12 @@
 {% endblock pagecss %}
 
 {% block pagecontent %}
-<article id="page-root">
+<article id="page-root" class="login">
     <div class="pw-reset-container card-case vertical-shadow">
         <iframe frameborder="0"
                 scrolling="no"
                 width="390px"
-                height="280px"
+                height="350px"
                 allowtransparency="yes"
                 src="{{templatetags.to_absolute_url('/pwchange')}}?form=1&reset_token={{reset_token}}">
         </iframe>
