--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -62,6 +62,7 @@ html {
 }
 
 body {
+    position: relative;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     color: #444;
