--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -9,16 +9,16 @@
 <article id="page-root" class="login">
     <div class="forgot-pw-container card-case vertical-shadow">
         {% if sent_email %}
-        <h4>We've sent you a message at:</h4>
+        <h4>We hebben je een bericht gestuurd op:</h4>
         {% else %}
-        <h4>To reset your password, enter your email:</h4>
+        <h4>Om je wachtwoord opnieuw in te stellen, vul je e-mailadres in.</h4>
         {% endif %}
         {% if sent_email %}
             <h5 class="email">{{ sent_email }}</h5>
             <br>
 
             <div class="instructions">
-                Follow the link in that message to reset your iktel.nl password.
+                Klik op de link in dat bericht om je wachtwoord te herstellen.
             </div>
 
             {% if debug_link %}
@@ -29,7 +29,7 @@
         {% else %}
             <form id="forgot-pw-form" method="POST" class="auth-form">
                 <div class="field-container">
-                    <label class="field-label" for="email">Email</label>
+                    <label class="field-label" for="email">E-mail</label>
                     <input name="email" id="email" class="simple-input ui-corner-all" autofocus>
                 </div>
 
@@ -37,7 +37,7 @@
                     <input name="reset" id="reset"
                         type="submit"
                         class="simple-button ui-corner-all green"
-                        value="Reset Password">
+                        value="Herstel wachtwoord">
                 </div>
             </form>
         {% endif %}
