--- a/templates/password-change.html
+++ b/templates/password-change.html
@@ -14,7 +14,7 @@
         <form id="pw-change-form" class="auth-form" method="POST" action="{{templatetags.to_secure_url('/pwchange')}}">
         <h4>
         {% if reset_token %}
-        Create a new password for your account.
+        Stel een nieuw wachtwoord voor je account in
         {% else %}
         Change password.
         {% endif %}
@@ -23,12 +23,12 @@
         <table class="pw-change-table">
         {% if request_info.target.email %}
         <tr>
-            <td class="input-label-cell">Email</td>
+            <td class="input-label-cell">E-mail</td>
             <td><input id="email" disabled="true" class="simple-input ui-corner-all" value={{request_info.target.email}}></td>
         </tr>
         {% endif %}
         <tr>
-            <td class="input-label-cell">Username</td>
+            <td class="input-label-cell">Gebruikersnaam</td>
             <td><input id="username-placeholder" disabled="true" class="simple-input ui-corner-all" value={{request_info.target.username}}>
                 {# disabled fields aren't sent up in the form POST, so we create a hidden one here
                    that will actually be sent #}
@@ -46,11 +46,11 @@
         </tr>
         {% endif %}
         <tr>
-            <td class="input-label-cell">New password</td>
+            <td class="input-label-cell">Nieuw wachtwoord</td>
             <td><input id="password1" name="password1" type="password" class="simple-input ui-corner-all"></td>
         </tr>
         <tr>
-            <td class="input-label-cell">Re-type new password</td>
+            <td class="input-label-cell">Herhaal nieuw wachtwoord</td>
             <td><input id="password2" name="password2" type="password" class="simple-input ui-corner-all"></td>
         </tr>
         <tr>
@@ -60,7 +60,7 @@
         </tr>
         <tr>
             <td colspan="2" class="submit-container">
-                <input id="submit-settings" type="button" value="Change password" class="simple-button green" style="margin-top: 1em;">
+                <input id="submit-settings" type="button" value="Verander wachtwoord" class="simple-button green" style="margin-top: 1em;">
             </td>
         </tr>
         </table>
