--- a/templates/password-reset-email-text-only.html
+++ b/templates/password-reset-email-text-only.html
@@ -1,12 +1,13 @@
 Hi {{name}},
 
-Forgot your password? It's okay -- we haven't forgotten you! Click on the following link to reset your password.
+Ben je je wachtwoord vergeten? Wees gerust, wij zijn jou niet vergeten! Klik op de volgende link op je wachtwoord opnieuw in te stellen.
 
 {{url}}
 
-If clicking doesn't seem to work, you can copy and paste the link into your browser's address bar.
+Indien je niet op deze link kunt klikken, kopieer en plak deze link dan in de adresbalk van je browser.
 
-If you didn't ask to reset your password, you can just ignore this email.
+Als je niet om een nieuw wachtwoord hebt gevraagd, kun je deze mail negeren.
 
-Cheers,
-Sal and the Khan Academy Team
+Groeten,
+
+iktel.nl team.
