--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,7 +25,7 @@
         <div class="pw-signup container">
             <div class="field-container row-fluid">
                 <label class="field-label span4" for="email">E-mail</label>
-                <input id="email" name="email" type="email" class="simple-input ui-corner-all span4" value="{{ values['email']|escape }}">
+                <input id="email" name="email" type="email" class="simple-input ui-corner-all span4" value="{{ values['email']|escape }}" {% if values['email'] %}disabled{%endif%}>
                 <div class="field-error span4" id="error-text"></div>
             </div>
 
